[gd_scene load_steps=17 format=4 uid="uid://bbssro71sr1jn"]

[ext_resource type="Script" uid="uid://dfiqy68jx28a2" path="res://scripts/Chapter1/level_1_start.gd" id="1_15y3v"]
[ext_resource type="PackedScene" uid="uid://2po5m5mgtl38" path="res://scene/Utility/world_environment_gloweffect.tscn" id="1_yhq2c"]
[ext_resource type="PackedScene" uid="uid://c5feweoi2hkte" path="res://scene/Utility/fps_counter.tscn" id="2_q12no"]
[ext_resource type="PackedScene" uid="uid://rou3hvjvk4pe" path="res://scene/Player_scene/player.tscn" id="3_4lrcw"]
[ext_resource type="PackedScene" uid="uid://cy5fmoflp5qlg" path="res://scene/Player_scene/Player_conditions.tscn" id="3_wa7mu"]
[ext_resource type="PackedScene" uid="uid://cpo6w3f0h3ie3" path="res://scene/Utility/camera_2d.tscn" id="4_idbhw"]
[ext_resource type="PackedScene" uid="uid://cfqff4kheixm" path="res://scene/Utility/area_2d_camera_room.tscn" id="6_4lrcw"]
[ext_resource type="Texture2D" uid="uid://c17lu264e832b" path="res://icon.svg" id="9_wa7mu"]
[ext_resource type="Texture2D" uid="uid://bwikyryid1hn8" path="res://assets/sprites/graphics.svg" id="10_wsga7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wa7mu"]
size = Vector2(6.80001, 68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wsga7"]
size = Vector2(6.80015, 68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t8lnl"]
size = Vector2(340, 85)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ojoao"]
size = Vector2(255, 255.349)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_al2ft"]
size = Vector2(255, 257.246)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wa7mu"]
texture = ExtResource("10_wsga7")
texture_region_size = Vector2i(161, 161)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-80.5, -80.5, 80.5, -80.5, 80.5, 80.5, -80.5, 80.5)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-80.5, -80.5, 80.5, -80.5, 80.5, 0, -80.5, 0)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-80.5, -80.5, 80.5, -80.5, 80.5, 0, -80.5, 0)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-80.5, -80.5, 80.5, -80.5, 80.5, 0, -80.5, 0)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-80.5, 0, 80.5, 0, 80.5, 80.5, -80.5, 80.5)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-80.5, 0, 80.5, 0, 80.5, 80.5, -80.5, 80.5)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-80.5, 0, 80.5, 0, 80.5, 80.5, -80.5, 80.5)
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-80.5, -80.5, 80.5, -80.5, 80.5, 80.5, -80.5, 80.5)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-80.5, -80.5, 80.5, -80.5, 80.5, 80.5, -80.5, 80.5)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-80.5, -80.5, 80.5, -80.5, 80.5, 80.5, -80.5, 80.5)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-80.5, -80.5, 80.5, -80.5, 80.5, 80.5, -80.5, 80.5)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-80.5, -80.5, 80.5, -80.5, 80.5, 80.5, -80.5, 80.5)
8:2/0 = 0
9:2/0 = 0
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-80.5, -80.5, 80.5, -80.5, 80.5, 80.5, -80.5, 80.5)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-80.5, -80.5, 80.5, -80.5, 80.5, 80.5, -80.5, 80.5)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-80.5, -80.5, 80.5, -80.5, 80.5, 80.5, -80.5, 80.5)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-80.5, -80.5, 80.5, -80.5, 80.5, 80.5, -80.5, 80.5)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-80.5, -80.5, 80.5, -80.5, 80.5, 80.5, -80.5, 80.5)
8:3/0 = 0
9:3/0 = 0
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-80.5, -80.5, 80.5, -80.5, 80.5, 80.5, -80.5, 80.5)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-80.5, -80.5, 80.5, -80.5, 80.5, 80.5, -80.5, 80.5)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-80.5, -80.5, 80.5, -80.5, 80.5, 80.5, -80.5, 80.5)
8:4/0 = 0
9:4/0 = 0

[sub_resource type="TileSet" id="TileSet_wsga7"]
tile_size = Vector2i(161, 161)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_wa7mu")

[node name="level_1_Start" type="Node2D"]
script = ExtResource("1_15y3v")

[node name="WorldEnvironment_gloweffect" parent="." instance=ExtResource("1_yhq2c")]

[node name="Player" parent="." instance=ExtResource("3_4lrcw")]
position = Vector2(2, -67)

[node name="Camera2D" parent="." instance=ExtResource("4_idbhw")]

[node name="CanvasLayer_fpscounter" parent="." instance=ExtResource("2_q12no")]

[node name="Player_conditions" parent="." instance=ExtResource("3_wa7mu")]

[node name="Area2D_cameraRoom" parent="." instance=ExtResource("6_4lrcw")]

[node name="Area2D_left" type="Area2D" parent="."]
position = Vector2(-1408, -32)
scale = Vector2(5, 5)

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Area2D_left"]
position = Vector2(-21, 6.4)
shape = SubResource("RectangleShape2D_wa7mu")

[node name="Area2D_right" type="Area2D" parent="."]
position = Vector2(-1408, -32)
scale = Vector2(5, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_right"]
position = Vector2(584.2, 6.4)
shape = SubResource("RectangleShape2D_wsga7")

[node name="Area2D_bottom" type="Area2D" parent="."]
position = Vector2(2, 800)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_bottom"]
position = Vector2(-2, 92.5)
shape = SubResource("RectangleShape2D_t8lnl")

[node name="Sprite2D_block_Left" type="Sprite2D" parent="."]
position = Vector2(-1402.5, -8.01086e-05)
scale = Vector2(1.99219, 2.65625)
texture = ExtResource("9_wa7mu")

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite2D_block_Left"]
scale = Vector2(0.501961, 0.501961)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D_block_Left/StaticBody2D"]
shape = SubResource("RectangleShape2D_ojoao")

[node name="Sprite2D_block_Right" type="Sprite2D" parent="."]
position = Vector2(1402.5, 0.249924)
scale = Vector2(1.99219, 2.65235)
texture = ExtResource("9_wa7mu")

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite2D_block_Right"]
scale = Vector2(0.501961, 0.501961)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D_block_Right/StaticBody2D"]
position = Vector2(0.499939, -0.187717)
shape = SubResource("RectangleShape2D_ojoao")

[node name="Sprite2D_block_Bottom" type="Sprite2D" parent="."]
position = Vector2(9.53674e-07, 807.5)
scale = Vector2(2.65625, 1.99219)
texture = ExtResource("9_wa7mu")

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite2D_block_Bottom"]
position = Vector2(0, 0.558746)
scale = Vector2(0.501961, 0.497579)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D_block_Bottom/StaticBody2D"]
position = Vector2(-7.42077e-06, -1.12292)
shape = SubResource("RectangleShape2D_al2ft")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
scale = Vector2(0.528, 0.528)
tile_map_data = PackedByteArray("AADw/wIAAAADAAIAAADv/wIAAAACAAIAAADu/wIAAAACAAIAAADu/wMAAAACAAMAAADu/wQAAAACAAMAAADu/wUAAAACAAMAAADu/wYAAAACAAMAAADu/wcAAAACAAMAAADu/wgAAAACAAMAAADu/wkAAAACAAMAAADu/woAAAACAAMAAADv/woAAAACAAMAAADw/woAAAACAAMAAADx/woAAAACAAMAAADy/woAAAACAAMAAAD6/woAAAACAAMAAAD7/woAAAACAAMAAAD8/woAAAACAAMAAAD9/woAAAADAAMAAAD9/wkAAAADAAMAAAD8/wkAAAACAAMAAAD8/wgAAAACAAIAAAD9/wgAAAADAAIAAAD7/wgAAAACAAIAAAD6/wgAAAACAAIAAAD5/wgAAAACAAIAAAD4/wgAAAACAAIAAAD3/wgAAAACAAIAAAD2/wgAAAACAAIAAAD1/wgAAAACAAIAAAD0/wgAAAACAAIAAADz/wgAAAACAAIAAADy/wgAAAACAAIAAADx/wgAAAACAAIAAADw/wgAAAAGAAIAAADv/wgAAAACAAMAAADv/wcAAAACAAMAAADv/wYAAAACAAMAAADv/wUAAAACAAMAAADv/wQAAAACAAMAAADv/wMAAAACAAMAAADw/wMAAAADAAMAAADw/wQAAAADAAMAAADw/wUAAAADAAMAAADw/wYAAAADAAMAAADw/wcAAAADAAMAAADv/wkAAAACAAMAAADw/wkAAAACAAMAAADx/wkAAAACAAMAAADy/wkAAAACAAMAAADz/wkAAAACAAMAAAD0/wkAAAACAAMAAAD1/wkAAAACAAMAAAD2/wkAAAACAAMAAAD3/wkAAAACAAMAAAD4/wkAAAACAAMAAAD5/wkAAAACAAMAAAD6/wkAAAACAAMAAAD7/wkAAAACAAMAAAD5/woAAAACAAMAAAD4/woAAAACAAMAAAD3/woAAAACAAMAAAD2/woAAAACAAMAAAD1/woAAAACAAMAAAD0/woAAAACAAMAAADz/woAAAACAAMAAAD+/wEAAAACAAAAAAD//wEAAAADAAAAAAAAAAEAAAADAAAAAAABAAEAAAAEAAAAAAAKAAMAAAAEAAAAAAD3/wMAAAAEAAAAAAD6/wUAAAAHAAAAAAAGAAUAAAAHAAAAAAD5/wUAAAAFAAAAAAAFAAUAAAAFAAAAAAD1/wMAAAACAAAAAAAIAAMAAAACAAAAAAD2/wMAAAADAAAAAAAJAAMAAAADAAAAAAACAAgAAAABAAIAAAACAAkAAAABAAMAAAACAAoAAAABAAMAAAAGAAgAAAACAAIAAAAHAAgAAAACAAIAAAAIAAgAAAACAAIAAAAJAAgAAAACAAIAAAAKAAgAAAACAAIAAAALAAgAAAACAAIAAAAMAAgAAAACAAIAAAANAAgAAAACAAIAAAAOAAgAAAACAAIAAAAPAAgAAAAFAAIAAAAPAAcAAAABAAMAAAAPAAYAAAABAAMAAAAPAAUAAAABAAMAAAAPAAMAAAABAAMAAAAPAAIAAAABAAIAAAAPAAQAAAABAAMAAAAPAP3/AAABAAQAAAAPAPz/AAABAAMAAAAPAPv/AAABAAMAAAAPAPn/AAABAAMAAAAPAPj/AAABAAMAAAAPAPr/AAABAAMAAADw//z/AAADAAMAAADw//v/AAADAAMAAADw//r/AAADAAMAAADw//n/AAADAAMAAADw//j/AAADAAMAAAAFAAgAAAACAAIAAAAEAAgAAAACAAIAAAADAAgAAAACAAIAAADw//3/AAADAAQAAADv//3/AAACAAQAAADu//3/AAACAAQAAAAQAP3/AAACAAQAAAARAP3/AAACAAQAAAAQAAIAAAACAAIAAAAPAPf/AAAFAAMAAADw//f/AAAGAAMAAADx//f/AAACAAQAAADy//f/AAACAAQAAADz//f/AAACAAQAAAD0//f/AAACAAQAAAD1//f/AAACAAQAAAD2//f/AAACAAQAAAD3//f/AAACAAQAAAD4//f/AAACAAQAAAD5//f/AAACAAQAAAD6//f/AAACAAQAAAD7//f/AAACAAQAAAD8//f/AAACAAQAAAD9//f/AAACAAQAAAD+//f/AAACAAQAAAD///f/AAACAAQAAAAAAPf/AAACAAQAAAABAPf/AAACAAQAAAACAPf/AAACAAQAAAADAPf/AAACAAQAAAAEAPf/AAACAAQAAAAFAPf/AAACAAQAAAAGAPf/AAACAAQAAAAHAPf/AAACAAQAAAAIAPf/AAACAAQAAAAJAPf/AAACAAQAAAAKAPf/AAACAAQAAAALAPf/AAACAAQAAAAMAPf/AAACAAQAAAANAPf/AAACAAQAAAAOAPf/AAACAAQAAADu//b/AAACAAMAAADv//b/AAACAAMAAADv//f/AAACAAMAAADv//j/AAACAAMAAADv//n/AAACAAMAAADv//r/AAACAAMAAADv//v/AAACAAMAAADv//z/AAACAAMAAADu//z/AAACAAMAAADu//v/AAACAAMAAADu//r/AAACAAMAAADu//n/AAACAAMAAADu//j/AAACAAMAAADu//f/AAACAAMAAADu//X/AAACAAMAAADv//X/AAACAAMAAADw//X/AAACAAMAAADx//X/AAACAAMAAADy//X/AAACAAMAAADz//X/AAACAAMAAAD0//X/AAACAAMAAAD1//X/AAACAAMAAAD2//X/AAACAAMAAAD3//X/AAACAAMAAAD4//X/AAACAAMAAAD5//X/AAACAAMAAAD6//X/AAACAAMAAAD7//X/AAACAAMAAAD8//X/AAACAAMAAAD9//X/AAACAAMAAAD+//X/AAACAAMAAAD///X/AAACAAMAAAAAAPX/AAACAAMAAAABAPX/AAACAAMAAAACAPX/AAACAAMAAAADAPX/AAACAAMAAAAEAPX/AAACAAMAAAAFAPX/AAACAAMAAAAGAPX/AAACAAMAAAAHAPX/AAACAAMAAAAIAPX/AAACAAMAAAAJAPX/AAACAAMAAAAKAPX/AAACAAMAAAALAPX/AAACAAMAAAAMAPX/AAACAAMAAAANAPX/AAACAAMAAAAOAPX/AAACAAMAAAAPAPX/AAACAAMAAAAQAPX/AAACAAMAAAARAPX/AAACAAMAAAARAPb/AAACAAMAAAARAPf/AAACAAMAAAARAPj/AAACAAMAAAARAPn/AAACAAMAAAARAPr/AAACAAMAAAARAPv/AAACAAMAAAARAPz/AAACAAMAAAAQAPz/AAACAAMAAAAQAPv/AAACAAMAAAAQAPr/AAACAAMAAAAQAPn/AAACAAMAAAAQAPj/AAACAAMAAAAQAPf/AAACAAMAAAAQAPb/AAACAAMAAAAPAPb/AAACAAMAAAAOAPb/AAACAAMAAAANAPb/AAACAAMAAAAMAPb/AAACAAMAAAALAPb/AAACAAMAAAAKAPb/AAACAAMAAAAJAPb/AAACAAMAAAAIAPb/AAACAAMAAAAHAPb/AAACAAMAAAAGAPb/AAACAAMAAAAFAPb/AAACAAMAAAAEAPb/AAACAAMAAAADAPb/AAACAAMAAAACAPb/AAACAAMAAAABAPb/AAACAAMAAAAAAPb/AAACAAMAAAD///b/AAACAAMAAAD+//b/AAACAAMAAAD9//b/AAACAAMAAAD8//b/AAACAAMAAAD7//b/AAACAAMAAAD6//b/AAACAAMAAAD5//b/AAACAAMAAAD4//b/AAACAAMAAAD3//b/AAACAAMAAAD2//b/AAACAAMAAAD1//b/AAACAAMAAAD0//b/AAACAAMAAADz//b/AAACAAMAAADy//b/AAACAAMAAADx//b/AAACAAMAAADw//b/AAACAAMAAAAQAAMAAAACAAMAAAARAAIAAAACAAIAAAARAAMAAAACAAMAAAARAAQAAAACAAMAAAARAAUAAAACAAMAAAARAAYAAAACAAMAAAARAAcAAAACAAMAAAAQAAcAAAACAAMAAAAQAAgAAAACAAMAAAAQAAkAAAACAAMAAAARAAkAAAACAAMAAAARAAoAAAACAAMAAAAQAAoAAAACAAMAAAAPAAoAAAACAAMAAAAOAAoAAAACAAMAAAANAAkAAAACAAMAAAAMAAkAAAACAAMAAAAMAAoAAAACAAMAAAALAAoAAAACAAMAAAAKAAoAAAACAAMAAAAJAAoAAAACAAMAAAAIAAoAAAACAAMAAAAHAAoAAAACAAMAAAAGAAoAAAACAAMAAAAFAAoAAAACAAMAAAAEAAkAAAACAAMAAAADAAkAAAACAAMAAAADAAoAAAACAAMAAAAEAAoAAAACAAMAAAALAAkAAAACAAMAAAAOAAkAAAACAAMAAAAPAAkAAAACAAMAAAAKAAkAAAACAAMAAAAJAAkAAAACAAMAAAAIAAkAAAACAAMAAAAHAAkAAAACAAMAAAAGAAkAAAACAAMAAAAFAAkAAAACAAMAAAANAAoAAAACAAMAAAARAAgAAAACAAMAAAAQAAUAAAACAAMAAAAQAAQAAAACAAMAAAAQAAYAAAACAAMAAAA=")
tile_set = SubResource("TileSet_wsga7")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1.5, 1.5, 1.5, 1)
position = Vector2(3.8147e-06, -19)
scale = Vector2(0.821256, 0.658228)
texture = ExtResource("10_wsga7")
region_enabled = true
region_rect = Rect2(1350, 329, 207, 316)
